Fix UI product counter overlap and update CORS content

--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -1,4 +1,4 @@
-.food-item{
+.food-item {
     width: 100%;
     margin: auto;
     border-radius: 15px;
@@ -8,12 +8,12 @@
     transition: all 0.3s ease;
 }
 
-.food-item:hover{
+.food-item:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
-.food-item-image{
+.food-item-image {
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -21,7 +21,7 @@
     border-top-left-radius: 15px;
 }
 
-.food-item-info{
+.food-item-info {
     padding: 20px;
 }
 
@@ -32,13 +32,13 @@
     margin-bottom: 10px;
 }
 
-.food-item-name-rating p{
+.food-item-name-rating p {
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-height: calc(1.6em); 
+    max-height: calc(1.6em);
     line-height: 1.6;
     font-size: 20px;
     font-weight: 600;
@@ -50,7 +50,7 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    height: calc(1.6em * 2); 
+    height: calc(1.6em * 2);
     line-height: 1.6;
     font-size: 14px;
     color: #747474;
@@ -74,19 +74,20 @@
     height: 35px;
     background-color: tomato;
     border-radius: 50%;
-    display: flex;                
-    align-items: center;         
-    justify-content: center;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
     box-shadow: 0 2px 5px #00000033;
     visibility: hidden;
+    color: white;
 }
 
-.food-item:hover .add{
+.food-item:hover .add {
     visibility: visible;
 }
 
-.food-item-counter{
+.food-item-counter {
     position: absolute;
     bottom: 15px;
     right: 15px;
@@ -96,7 +97,7 @@
     padding: 6px;
     cursor: pointer;
     border-radius: 50px;
-    background-color: tomato;
+    background-color: white;
 }
 
 @media (max-width: 1024px) {
@@ -186,4 +187,3 @@
         gap: 6px;
     }
 }
-
